# super-duper-palm-tree

./: .gitignore  CLAUDE.md  README.md  USAGE.md  cli.py  docker-compose.yaml  pyproject.toml
app/: Dockerfile  app.py  requirements.txt
app/crawler/: crawl4ai_engine.py  engine.py  http_client.py  job_manager.py  parser.py  rate_limiter.py  url_queue.py  url_utils.py  worker.py
app/crawler/ai/: claude_provider.py  gemini_provider.py  provider.py
