[project]
name = "leads-crawler"
version = "0.1.0"
description = "AI-powered leads crawler with CLI REPL and REST API"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.0.0",
    "gunicorn>=22.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.2.0",
    "anthropic>=0.30.0",
    "google-genai>=1.0.0",
    "python-dotenv>=1.0.0",
    "crawl4ai>=0.5.0",
]

[project.scripts]
leads-crawler = "cli:main"
